--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "@babel/node": "^7.22.1",
     "@babel/preset-env": "^7.22.4",
     "@babel/preset-typescript": "^7.21.5",
+    "@prisma/client": "^4.15.0",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/node": "^20.3.0",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.42.0",
@@ -30,10 +33,13 @@
     "eslint-plugin-promise": "^6.1.1",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
+    "prisma": "^4.15.0",
+    "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.3"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.1.3",
     "express": "^4.18.2"
