--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "babel src/index.ts --extensions \".ts, .js\" --out-dir build --copy-files --no-copy-ignored",
-    "start": "npm run build && node build/index.js",
+    "start": "npm run build && nodemon ./build/index.js",
     "start:dev": "nodemon ./build/index.js"
   },
   "author": "Valenn0101",
@@ -18,6 +18,7 @@
     "@babel/node": "^7.22.1",
     "@babel/preset-env": "^7.22.4",
     "@babel/preset-typescript": "^7.21.5",
+    "@flydotio/dockerfile": "^0.2.15",
     "@prisma/client": "^4.15.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
